se inserto carpeta con clase conexion, lacarpeta modelo con clases de User y Ruletas, la carpeta dao con clase RuletaDao y userDao , se modificoel contexto

--- a/Ruleta/appsettings.json
+++ b/Ruleta/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ConnectionString": "Data Source=.; Initial catalog=DESKTOP-MQBAK55; Integrated Security=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
